--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <pre>Hello, world!</pre>
+        <a href="demos/tetraminos/index.html">Tetraminos...</a>
     </body>
 </html>
